2006-06-09  Stefan Siegl  <stesie@brokenpipe.de>

	* linux/dev/include/asm-i386/uaccess.h: New dummy file.
	* linux/dev/include/linux/pm.h: Likewise.
	* linux/dev/include/linux/threads.h: Likewise.
	* linux/src/include/linux/symtab_begin.h: New file from Linux 2.0.40.
	* linux/src/include/linux/symtab_end.h: Likewise.
	* linux/src/include/linux/module.h: Update from Linux 2.0.40 with minor
	changes.
	* linux/src/include/linux/list.h: New file from Linux 2.2.26.
	* linux/src/include/linux/kcomp.h: Likewise with minor changes.
	* linux/src/include/linux/wait.h: Update from Linux 2.2.26.
	* linux/src/include/linux/wireless.h: Likewise.
	* linux/src/include/asm-i386/bitops.h [__KERNEL__] (ffs, hweight32)
	(hweight16, hweight8): Copy from Linux 2.2.26.

	* kern/printf.c (_doprnt): Support printing of pointer addresses.

2006-05-14  Roland McGrath  <roland@frob.com>

	[sync from HEAD, 2002-06-17]
	* device/if_hdr.h: Replace ancient UCB copyright terms with current
	approved UCB terms.
	* include/sys/reboot.h: Likewise.
	* include/device/disk_status.h: Likewise.
	* include/device/tape_status.h: Likewise.
	* device/net_io.c: Remove advertising clause from UCB copyright terms.
	* include/device/audio_status.h: Likewise.
	* include/device/bpf.h: Likewise.

2006-05-14  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/i386at/autoconf.c (bus_device_init) <lpr> [! LINUX_DEV]: Depend
	on `MACH_LPR' instead.
	* i386/i386at/lpr.c: Fix obsolescent `#else' / `#endif' syntax.

2006-05-12  Stefan Siegl  <stesie@brokenpipe.de>

	* linux/dev/glue/kmem.c (vfree): Panic if `vmalloc_list_lookup' did
	NOT succeed.

2006-05-08  Thomas Schwinge  <tschwinge@gnu.org>

	* DEVELOPMENT: Document Samuel's patch.

2006-05-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[bug #7118]
	* i386/i386at/model_dep.c (mem_size_init): Limit memory to what can
	actually be used (minus a little extra for virtual mappings).
	* i386/intel/pmap.c (pmap_bootstrap): Extend the virtual mapping area