@@ -1,3 +1,13 @@
+2006-06-30  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* i386/i386at/kd_mouse.c (mouse_char_in, mouse_char) Remove variables.
+	(mouse_char_index) New variable.
+	(mouse_handle_byte, kd_mouse_read): Use MOUSEBUF instead of MOUSE_CHAR
+	for storing incoming command characters.
+	(kd_mouse_read_reset): New function.
+	(ibm_ps2_mouse_open, ibm_ps2_mouse_close): Call new kd_mouse_read_reset
+	function.
+
 2006-06-09  Stefan Siegl  <stesie@brokenpipe.de>
 
 	* linux/dev/include/asm-i386/uaccess.h: New dummy file.
